# jep-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/hjs-cli/src/: main.rs
crates/hjs-core/: Cargo.toml
crates/hjs-core/src/: event.rs  lib.rs  receipt.rs
