[workspace]
members = ["crates/hjs-core", "crates/jep-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["Yuqiang Wang <signal@humanjudgment.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jep-spec/hjs-core"
homepage = "https://humanjudgment.org"
description = "Core implementation of JEP: A Judgment Event Protocol (IETF draft)"
keywords = ["jep", "judgment-event", "ai-accountability", "ietf", "verifiable-credentials"]
categories = ["cryptography", "authentication"]
